2000-12-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/session.c (DisableSM):
	* fvwm/fvwm.c (StartupStuff):
	turn off the SM stuff after the initial capture so that new windows will
	not be matched by accident.

	* fvwm/session.c (MatchWinToSM):
	do not preserve desk number for sticky windows over a restart

	* fvwm/fvwm.c (main):
	renamed a variable

2000-12-27  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/purify.fvwm2rc: more test updates.

2000-12-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	fixed off screen focus grabbing

2000-12-26  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/stack.c (get_transientfor_fvwmwindow): Treat root window list
	as a null terminated list.

2000-12-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.3.27

2000-12-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c:
	* fvwm/fvwm.c:
	* fvwm/focus.c:
	* fvwm/events.c:
	* fvwm/builtins.c:
	* libs/Bindings.c (GrabAllWindowKeysAndButtons):
	(GrabAllWindowButtons):
	(GrabAllWindowKeys):
	Don't call XSync after grabbing/ungrabbing the server. This is done
	automatically in the library.

	* libs/Grab.c (MyXUngrabServer):
	(MyXGrabServer):
	sync the server after grabbing/releasing the server

2000-12-22  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/purify.fvwm2rc: A few more tests.

2000-12-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (PositiveWrite):
	retry select() if it failed with EINTR

	* libs/fvwmsignal.c (fvwmSelect):
	Return 0 instead of -1 if select() was not really executed. Otherwise
	the caller might evaluate an invalid "errno".

2000-12-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEvents):
	* fvwm/add_window.c (destroy_window):
	* fvwm/update.c (destroy_sceduled_windows):
	(flush_window_updates):
	fixed new window destruction logic; forgot to actually destroy the
	frames of windows that were destroyed in a complex function under some